--- a/Project Proposal/CSE299.tex
+++ b/Project Proposal/CSE299.tex
@@ -47,29 +47,61 @@
     \end{center}
 \end{titlepage}
 \section{Introduction}
-The proposed application will be selling products such as computers, laptops, hard disks and others related computer gadgets. E-commerce or Online Store is fast gaining ground as an accepted and used business paradigm. More and more business houses are implementing web sites providing functionality for performing commercial transactions over the web. It is reasonable to say that the process of shopping on the web is becoming commonplace. \par
-The objective of this project is to develop a product catalog where any product of Company Name (such as Laptops, computers, mobile phones, electronic items, and many more) can be view and users can request items online using their laptops, desktops and even your mobile smart phones. \par
-This is a virtual store on the Internet where customers can browse the catalog and select products of interest. The customer will then contact the company’s contact details to confirm and complete the transaction.
+The proposed application will be selling products such as computers, laptops, keyboard, house, headphones, SSDs and others related technology gadgets. E-commerce or Online Store is fast gaining ground as an accepted and used business paradigm. More and more business houses are implementing web sites providing functionality for performing commercial transactions over the web. It is reasonable to say that the process of shopping on the web is becoming a commonplace. \par
+The objective of this project is to develop a product catalog where products can be viewed and users can buy items online using their PC or smartphone. \par
+This is a virtual store where customers can browse the catalog and add products they want to buy to the cart. Then they can checkout the items in the cart and provide to pay online or Payment on Delivery.
 
-\section{Objectives}
-The general objective of the study is to design and develop an online store system that will help the company and employees to become more popular by marketing their business to the internet world. The main two objectives are:
+\section{Description}
+The general objective of the project is to design and develop an online shopping experience. The system should the following features: \par
 \begin{itemize}
-    \item Develop an online catalog of products.
-    \item Provide the customers for a hustle free transaction without going to the store for buying an item or product.
+    \item A catalog of products with multiple categories.
+    \item User based cart management.
+    \item Online Payment or Payment on Delivery.
+    \item Delivery Management System.
+    \item Inventory Management System.
+    \item Accounting Management System.
+\end{itemize}
+There will be three types of user: \par
+\begin{itemize}
+    \item Admin
+    \item Employee
+    \item Customer
 \end{itemize}
 
 \section{Features}
+\subsection{Catalog of Products}
+Like shelves on a physical store, our online store will have products which will be divided into different categories, the categories will be dynamic, so you can add new categories without accessing the code.
+
+\subsection{User Cart}
+Every time an user adds a product to their cart, it'll stay there till the user wants checkouts it out or cancels it.
+
+\subsction{Online Payment}
+There will be an online payment gateway for our users to pay using their card or digital wallet, there will be a payment on delivery option as well.
+
+\subsction{Delivery}
+Users will be able to track their orders in the phone and see status of the delivery.
+
+\subsction{Inventory}
+The system will automatically keep track of product availability depending on the data provided by an employee.
+
+\subsction{Accounting}
+The system will keep track of all the transactions of the system; keep track of purchases, invoices, payments etc.
 
 \section{Technology}
-We decided to go with latest technologies for developing this application in order to give users a better experience.
+We decided to use Django with REST API as our backend and React for our Frontend.
 
 \subsection{Frontend}
-For the front end we will be using HTML, CSS, JavaScript and React. It allows developers to create large web applications that can change data, without reloading the page. The main purpose of using this is to be fast, scalable, and simple.
+Since our site needs to be attractive and smooth, we planned to use React.JS, an web framework of JavaScript which is developed by Facebook. This will give us plenty of wiggle room on how much customization we can make to the system. The Frontend will only deal with data viewing, beautification of site, and send data back and from to the API.
 
 \subsection{Backend}
-
-\subsubsection{Database}
+We are using Django, a python web framework as our backend system and PostgreSQL as our Relational Database System. Django gives us a lot of room to add functionality to our system. We will be building an API, using the Django REST framework, which will bridge the connection between backend and frontend. \par
+Django will take care of authentication. We plan to use third part authentication API to make sure people can login with their Google Account/ Facebook or other system.
 
 \subsubsection{Payment method}
+We are planning to use SSLCommerz's Sandbox as our payment gateway.
+
+\section{DevOps}
+The code will be configured with CI and CD using GitHub Actions. It'll automatically create pull requests when some basic tests are passed by our code, and after we verify the pull requests to the main branch, the CD will automatically deploy it to our cloud provider. \par
+We will be using GCP/AWS/Azure as our Cloud provider. We will use their Kubernetes solutions to automatically orchestrate our dockerized application, so it runs and scales automatically on the fly.
 
 \end{document}
